--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "downshift": "^5.0.3",
+    "glamor": "^2.20.40",
+    "glamorous": "^5.0.0",
     "lodash": "^4.17.15",
     "mdbootstrap": "^4.11.0",
     "mdbreact": "^4.24.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
@@ -27,6 +31,7 @@
     "resolve-url-loader": "^3.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.0.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
