--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
+    "downshift": "^5.0.3",
+    "glamor": "^2.20.40",
     "lodash": "^4.17.15",
     "mdbootstrap": "^4.11.0",
     "mdbreact": "^4.24.0",
@@ -20,7 +22,9 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-select-search": "^0.10.1",
-    "react-virtualized": "^9.21.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
