--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "admin-bro": "^2.1.0-beta.9",
+    "admin-bro-expressjs": "^2.0.0",
+    "admin-bro-mongoose": "^0.4.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
     "express": "^4.16.4",
+    "express-formidable": "^1.2.0",
     "express-validator": "^5.3.1",
     "glamorous": "^5.0.0",
     "gravatar": "^1.8.0",
