--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "ant-design-pro": "^2.3.2",
     "antd": "^4.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
@@ -18,6 +19,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^5.1.1",
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
@@ -57,5 +59,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "react-hook-form-devtools": "^1.1.2"
+  }
 }
