--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
     "downshift": "^5.0.3",
+    "formik": "^2.1.4",
+    "formik-antd": "^2.0.0",
     "glamor": "^2.20.40",
     "lodash": "^4.17.15",
     "mdbootstrap": "^4.11.0",
@@ -19,7 +21,6 @@
     "node-sass": "^4.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hook-form": "^5.1.1",
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
