--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "admin-bro-expressjs": "^2.0.0",
     "admin-bro-mongoose": "^0.4.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.1.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-formidable": "^1.2.0",
     "express-validator": "^5.3.1",
@@ -25,6 +28,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
+    "nodemailer": "^6.4.6",
     "react-autosuggest": "^9.4.3",
     "request": "^2.88.0"
   },
