--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react-big-calendar": "^0.28.1",
     "react-dom": "^16.8.6",
     "react-ga": "^3.1.2",
+    "react-idle-timer": "^4.5.0",
     "react-list": "^0.8.15",
+    "react-modal": "^3.11.2",
     "react-moment": "^0.9.2",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.1.0",
